# reservations-rust-microservice

./: .env.example  Cargo.toml  README.md  Rocket.toml
migrations/: 20260130090909_init.down.sql  20260130090909_init.up.sql  20260130094909_reservation_status.down.sql  20260130094909_reservation_status.up.sql  20260130150000_init.sql
src/: lib.rs  main.rs  reservations.rs  users.rs  utils.rs
tests/: reservations_create.rs
