[package]
name = "reservations-rust-microservice"
version = "0.1.0"
edition = "2021"
default-run = "reservations-rust-microservice"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.43"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = "0.4.29"
rand_core = "0.6.4"
rocket = {version = "0.5.1", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.7.0"
tokio = "1.49.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
